--- a/index.html
+++ b/index.html
@@ -1,36 +1,67 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" href="main.css">
-		<title>I SPY CITYSCAPE</title>
-		<link href="https://fonts.googleapis.com/css?family=Dokdo" rel="stylesheet">
-	</head>
-		<body>
-			<!-- CSS Animation Headline -->
-			<p class= "scale-down-hor-center" style="position:absolute;">I SPY CITYSCAPE!<br />SCROLL DOWN FOR MUSIC!</p></br />
-			<!-- Buttons -->
-			<div class="button">
-				<button class="start" onclick="startGame()">Start!</button>
-				<button class="reset" onclick="restartGame()">Restart!</button>
-			</div>
-			<!-- Clock -->
-			<p id="clock"> minutes</p>
-			<!-- Phrases -->
-			<p id="new-phrase" style="position:absolute;"></p>
-			<!-- Game -->
-			<div class= "game">
-				<div class="cityscape">
-					<img id="show-image" src="prjt1_test.png"
-						style="width:1100px;height:1000;position:absolute;z-index:-1;visibility:hidden;">
-					<img id="hidden-img" src="prjt1_next_img.png"
-						style="width:1100px;height:1000;position: absolute;z-index:-1;visibility:hidden;">
-				</div>
-			</div>
-			<!--MP3 Player https://www.adamvitovsky.com/8bit-trisco -->
-			<!-- Couldn't figure out autoplay, but the ability to stop audio is important -->
-			<audio controls>
-  		<source src="8bit_Trisco_MP3.mp3" type="audio/mp3">
-			</audio>
-			<script type="text/javascript" src="script.js"></script>
-		</body>
+  <head>
+    <link rel="stylesheet" href="main.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Sniglet:400,800&display=swap"
+      rel="stylesheet"
+    />
+    <title>I SPY CITYSCAPE</title>
+  </head>
+  <body>
+	  
+    <!-- CSS Animation Headline -->
+    <div class="background-color">
+      <h2>I SPY CITYSCAPE</h2>
+    </div>
+    <div class="gameplay-intro-container">
+      <p class="gameplay-intro">
+        Click the <img src="startbutton-icon.png" id="start-icon" /> button to
+        begin the game and the
+        <img src="restartbutton-icon.png" id="restart-icon" /> button to start
+        over.<br />Players will have 1 MINUTE to find all items described by the
+        I SPY phrases.
+        <br />
+        Find all items and reveal a pretty 8bit image!
+      </p>
+    </div>
+    <div class="down-arrow-container">
+      <p class="background-color" id="down-arrow">⇩</p>
+    </div>
+
+    <!-- Clock -->
+    <div class="clock-container"><p id="clock"></p></div>
+	
+	<!-- Buttons -->
+	<div class="button-container">
+      <button class="start-button" onclick="startGame()">Start!</button>
+      <!-- Phrases -->
+      <p id="new-phrase" style="position:absolute;"></p>
+      <button class="reset-button" onclick="restartGame()">Restart!</button>
+    </div>
+
+    <!-- Game -->
+    <div class="game-container">
+      <div class="cityscape">
+        <img
+          id="first-image"
+          src="prjt1_test.png"
+          style="width:1100px;position:absolute;z-index:-1;visibility:hidden;margin-bottom:5vh;"
+        />
+        <img
+          id="hidden-img"
+          src="prjt1_next_img.png"
+          style="width:1100px;position: absolute;z-index:-1;visibility:hidden;"
+        />
+      </div>
+	</div>
+	
+    <!--MP3 Player https://www.adamvitovsky.com/8bit-trisco -->
+    <div class="audio-container">
+      <audio controls autoplay>
+        <source src="8bit_Trisco_MP3.mp3" type="audio/mp3" />
+      </audio>
+    </div>
+    <script type="text/javascript" src="script.js"></script>
+  </body>
 </html>
